fixed alignment issue

--- a/src/app/components/layout/side-menu/side-menu.component.css
+++ b/src/app/components/layout/side-menu/side-menu.component.css
@@ -201,3 +201,9 @@ svg#north-icon {
 .sidemenu-link.is-active #north-icon {
   filter: invert(1) brightness(100%);
 }
+
+.sidemenu-link #south-icon,
+.sidemenu-link #north-icon {
+  vertical-align: middle;
+  margin-top: -9px;
+}
